support FacetRanges for solr 6 code taken from https://github.com/cro575/vacu_solr_client

--- a/SolrNet/SolrNet.csproj
+++ b/SolrNet/SolrNet.csproj
@@ -184,6 +184,7 @@
     <Compile Include="ISolrCoreAdmin.cs" />
     <Compile Include="Pivot.cs" />
     <Compile Include="PivotFields.cs" />
+    <Compile Include="RangeFacetingResult.cs" />
     <Compile Include="SolrMLTQuery.cs" />
     <Compile Include="PivotFacetingResult.cs" />
     <Compile Include="Impl\ResponseParsers\GroupingResponseParser.cs" />
